--- a/pictures.html
+++ b/pictures.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qDvLcGNwkD" once="menu" id="menu1-l" data-rv-view="186">
+<section class="menu cid-qDvLcGNwkD" once="menu" id="menu1-l" data-rv-view="40">
 
     
 
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/h">make a website</a></section><section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="6486850106.727bfe1.81136a2af5994abbb15bfe7eff7225c9" data-per-row-grid="4" id="instagram-feed-block-m" data-rv-view="50" style="background-image: url(assets/images/pgc-logo-landscape-jpg-896x391.jpg); padding-top: 40px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.co/q">bootstrap slideshow</a></section><section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="6486850106.727bfe1.81136a2af5994abbb15bfe7eff7225c9" data-per-row-grid="4" id="instagram-feed-block-m" data-rv-view="42" style="background-image: url(assets/images/pgc-logo-landscape-jpg-896x391.jpg); padding-top: 40px; padding-bottom: 40px;">
     
     <div class="container container_toggle">
         <div class="row">
